[package]
name = "render-target"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
safety_check = []
debug_draw = ["software25d/debug_draw", "software3d/debug_draw"]
hprof = ["software25d/hprof", "software3d/hprof"]
trig_lut = ["software25d/trig_lut"]

[dependencies]
gameplay.workspace = true
sdl2.workspace = true
nanoserde.workspace = true
render-trait.workspace = true
software25d.workspace = true
software3d.workspace = true
coarse-prof.workspace = true
