[package]
name = "render-target"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
safety_check = []
hprof = ["software25d/hprof", "software3d/hprof"]
render_stats = ["software3d/render_stats"]
trig_lut = ["software25d/trig_lut"]

[dependencies]
gameplay.workspace = true
sdl2.workspace = true
nanoserde.workspace = true
render-trait.workspace = true
software25d.workspace = true
software3d.workspace = true
coarse-prof.workspace = true
