[package]
name = "render-soft"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
safety_check = []
debug_draw = []
debug_seg_clip = []
debug_seg_invert = []
hprof = []
trig_lut = ["math/trig_lut"]

[dependencies]
glam.workspace = true
math.workspace = true
gameplay.workspace = true
render-trait.workspace = true
coarse-prof.workspace = true

[dev-dependencies]
wad.workspace = true
