[package]
name = "software25d"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
safety_check = []
debug_seg_clip = []
hprof = []
trig_lut = ["math/trig_lut"]

[dependencies]
game-config.workspace = true
glam.workspace = true
log.workspace = true
level.workspace = true
math.workspace = true
gameplay.workspace = true
pic-data.workspace = true
render-common.workspace = true
coarse-prof.workspace = true

[dev-dependencies]
wad.workspace = true
test-utils.workspace = true
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false

[lints]
workspace = true
