[package]
name = "software3d"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
default = []
hiz_prev_frame = []
hprof = []
render_stats = []
bench = []

[dependencies]
glam.workspace = true
math.workspace = true
gameplay.workspace = true
render-trait.workspace = true
coarse-prof.workspace = true
hud-util.workspace = true

[dev-dependencies]
wad.workspace = true
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
required-features = ["bench"]
