[package]
name = "sound-nosnd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]

[dependencies]
wad.workspace = true
sound-traits.workspace = true
log.workspace = true
glam.workspace = true
nanoserde.workspace = true
